# vader

./: CMakeLists.txt  README.md  vader-import.cmake.in
.github/workflows/: ci.yml
CI/: CMakeLists.txt  buildspec_clang.yml  buildspec_gnu.yml  buildspec_intel.yml  codecov_script.sh
CI/cmake/: CTestConfig.cmake
cmake/: compiler_flags_IntelLLVM_Fortran.cmake  vader_compiler_flags.cmake
src/: CMakeLists.txt
src/OceanConversions/: OceanConversions.interface.F90  OceanConversions.interface.h
src/mo/: .CMakeLists.txt.swp  common_linearvarchange.cc  common_linearvarchange.h  common_varchange.cc  common_varchange.h  constants.h  control2analysis_linearvarchange.cc  control2analysis_linearvarchange.h  control2analysis_varchange.cc  control2analysis_varchange.h  dlsvpW_lookup.h  dlsvp_lookup.h  eval_air_density.cc  eval_air_density.h  eval_air_pressure.cc  eval_air_pressure.h  eval_air_pressure_levels.cc  eval_air_pressure_levels.h  eval_air_temperature.cc  eval_air_temperature.h  eval_cloud_ice_mixing_ratio.cc  eval_cloud_ice_mixing_ratio.h  eval_cloud_liquid_mixing_ratio.cc  eval_cloud_liquid_mixing_ratio.h  eval_dry_air_density.cc  eval_dry_air_density.h  eval_exner.cc  eval_exner.h  eval_geostrophic_to_hydrostatic_pressure.cc  eval_geostrophic_to_hydrostatic_pressure.h  eval_geostrophic_to_hydrostatic_pressure_levels_minus_one.cc  eval_geostrophic_to_hydrostatic_pressure_levels_minus_one.h  eval_hydrostatic_balance.cc  eval_hydrostatic_balance.h  eval_mio_fields.cc  eval_mio_fields.h  eval_moisture_control.cc  eval_moisture_control.h  eval_moisture_incrementing_operator.cc  eval_moisture_incrementing_operator.h  (+37 more)
src/vader/: CMakeLists.txt  DefaultCookbook.h  PressureToDelP.cc  PressureToDelP.h  RecipeBase.cc  RecipeBase.h  RecipeParameters.h  TempToPTemp.cc  TempToPTemp.h  VaderConfigVars.cc  VaderConfigVars.h  VaderConstructConfig.cc  VaderConstructConfig.h  VaderParameters.h  cookbook.h  recipe.cc  recipe.h  vader.cc  vader.h  vadervariables.h
src/vader/recipes/: AirDensityLevelsMinusOne.h  AirDensityLevelsMinusOne_A.cc  AirDensityLevelsMinusOne_B.cc  AirPotentialTemperature.h  AirPotentialTemperature_A.cc  AirPotentialTemperature_B.cc  AirPressure.h  AirPressureAtInterface.h  AirPressureAtInterface_A.cc  AirPressureAtInterface_B.cc  AirPressureAtInterface_C.cc  AirPressureExtendedUpByOne.h  AirPressureExtendedUpByOne_A.cc  AirPressureThickness.h  AirPressureThickness_A.cc  AirPressureToKappa.h  AirPressureToKappa_A.cc  AirPressure_A.cc  AirTemperature.h  AirTemperature_A.cc  AirTemperature_B.cc  AirVirtualTemperature.h  AirVirtualTemperature_A.cc  CloudIceMixingRatio.h  CloudIceMixingRatio_A.cc  CloudLiquidMixingRatio.h  CloudLiquidMixingRatio_A.cc  DryAirDensity.h  DryAirDensityLevelsMinusOne.h  DryAirDensityLevelsMinusOne_A.cc  DryAirDensityLevelsMinusOne_B.cc  DryAirDensityLevelsMinusOne_C.cc  DryAirDensity_A.cc  EastwardWindAt10m.h  EastwardWindAt10m_A.cc  HydrostaticExnerLevels.h  HydrostaticExnerLevels_A.cc  HydrostaticPressureLevels.h  HydrostaticPressureLevels_A.cc  LnAirPressureAtInterface.h  (+49 more)
test/: CMakeLists.txt
test/testdata/: AirTemperature_A.nc  aero6_gauss_state_F12.nc  air_density_levels_minus_one_A.nc  air_density_levels_minus_one_B.nc  dry_air_density_levels_minus_one_A.nc  dry_air_density_levels_minus_one_C.nc  gauss_state_F12.nc  rename_part4.sh  rrfs_sd_gauss_state_F12.nc  wind_at_10m_A.nc
test/testinput/: planvariable.yaml  recipe_AirDensityLevelsMinusOne_A.yaml  recipe_AirDensityLevelsMinusOne_B.yaml  recipe_AirPressureExtendedUpByOne_A.yaml  recipe_AirTemperature_A.yaml  recipe_CloudIceMixingRatio_A.yaml  recipe_CloudLiquidMixingRatio_A.yaml  recipe_DryAirDensityLevelsMinusOne_A.yaml  recipe_DryAirDensityLevelsMinusOne_B.yaml  recipe_DryAirDensityLevelsMinusOne_C.yaml  recipe_HydrostaticExnerLevels_A.yaml  recipe_HydrostaticPressureLevels_A.yaml  recipe_ParticulateMatter2p5_A.yaml  recipe_ParticulateMatter2p5_B.yaml  recipe_RainMixingRatio_A.yaml  recipe_RelativeHumidity_A.yaml  recipe_SaturationSpecificHumidity_A.yaml  recipe_SaturationVaporPressure_A.yaml  recipe_TotalMixingRatio_A.yaml  recipe_TotalRelativeHumidity_A.yaml  recipe_TotalWater_A.yaml  recipe_VirtualPotentialTemperature_A.yaml  recipe_VirtualPotentialTemperature_B.yaml  recipe_WaterVaporMixingRatioWrtMoistAirAndCondensedWater2m_A.yaml  recipe_WaterVaporMixingRatioWrtMoistAirAndCondensedWater_A.yaml  recipe_uwind_at_10m_A.yaml  recipe_vwind_at_10m_A.yaml  vader_AirDensityLevelsMinusOne_A.yaml  vader_AirDensityLevelsMinusOne_B.yaml  vader_AirTemperature_A.yaml  vader_CloudIceMixingRatio_A.yaml  vader_CloudLiquidMixingRatio_A.yaml  vader_DryAirDensityLevelsMinusOne_A.yaml  vader_DryAirDensityLevelsMinusOne_B.yaml  vader_DryAirDensityLevelsMinusOne_C.yaml  vader_HydrostaticExnerLevels_A.yaml  vader_ParticulateMatter2p5_A.yaml  vader_ParticulateMatter2p5_B.yaml  vader_RainMixingRatio_A.yaml  vader_TotalMixingRatio_A.yaml  (+7 more)
test/vader/: PlanVariable.h  PrintVader.h  Recipe.h  TestPlanVariable.cc  TestPrintVader.cc  TestRecipe.cc  TestUtils.cc  TestVader.cc  Utils.h  Vader.h
test/vader/mo/: CheckLookupTables.h  TestCheckLookupTables.cc
